gcc/testsuite/rust/rustc/ui/extern/extern-main-issue-86110_dg.rs
// missing and missing2 exist to make sure that the error only happens on a `main` declaration
extern "C" {
    fn missing();
    fn main();
// { dg-error "" "" { target *-*-* } .-1 }
    fn missing2();
}

